# photonic-mlir-synth-bridge

./: .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.json  AUTONOMOUS_SDLC_SUMMARY.md  BREAKTHROUGH_ENHANCEMENTS_SUMMARY.md  CI_WORKFLOW.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_AUTONOMOUS_EXECUTION_REPORT.md  GENERATION4_AUTONOMOUS_EXECUTION_COMPLETE.md  GENERATION4_AUTONOMOUS_EXECUTION_REPORT.md  Makefile  PROJECT_CHARTER.md  README.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  autonomous_completion_report.py  autonomous_quality_gates.py  breakthrough_generation4_demo.py  breakthrough_production_enhancement_report.json  breakthrough_production_ready_enhancements.py  breakthrough_quantum_adaptive_demo.py  breakthrough_research_demo.py  comprehensive_quality_gates.py  enhanced_reliability_fixes.py  final_autonomous_sdlc_validation.py  final_integration_results.json  final_integration_test.py  final_terragon_sdlc_validation_report.json  generation2_robust_demo.py  generation3_results.json  generation3_scale_demo.py  generation3_scaling_enhancement.py  generation4_breakthrough_results_1755826561.json  healing_report.json  production_ready_fixes.py  pyproject.toml  (+10 more)
.github/workflows/: ci.yml
benchmark_results/: benchmark_report.txt  benchmark_summary.json  detailed_results.json  performance_comparison.json  scaling_analysis.json
docker/: Dockerfile  docker-compose.yml
docs/: ROADMAP.md
docs/adr/: 0000-adr-template.md  0001-mlir-dialect-design.md
include/: CMakeLists.txt
include/PhotonicMLIR/: CMakeLists.txt
include/PhotonicMLIR/Conversion/: CMakeLists.txt  PhotonicToHLS.h  TorchToPhotonic.h
include/PhotonicMLIR/Dialect/: CMakeLists.txt  PhotonicDialect.h  PhotonicDialect.td  PhotonicOps.h  PhotonicOps.td  PhotonicTypes.h  PhotonicTypes.td
include/PhotonicMLIR/Transforms/: CMakeLists.txt  Passes.h
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
python/: CMakeLists.txt
python/bindings/: PhotonicMLIRModule.cpp
python/photonic_mlir/: __init__.py  adaptive_ml.py  adaptive_realtime_compiler.py  autonomous_scaling_optimizer.py  benchmarking.py  breakthrough_cv_quantum.py  breakthrough_evolution.py  breakthrough_holographic_fusion.py  breakthrough_photonic_nas.py  breakthrough_quantum_coherence.py  breakthrough_research.py  cache.py  circuit_breaker.py  cli.py  compiler.py  compliance.py  concurrent.py  continuous_variable_quantum.py  enhanced_validation.py  error_handling.py  exceptions.py  fallback_deps.py  global_compliance.py  health_checks.py  holographic_computing.py  i18n.py  import_utils.py  load_balancer.py  logging_config.py  monitoring.py  neural_photonic_synthesis.py  neuromorphic_photonic.py  optimization.py  pytorch_frontend.py  quantum_enhanced_compiler.py  quantum_photonic_bridge.py  quantum_photonic_fusion.py  research.py  security.py  self_evolving_nas.py  (+2 more)
research_results/: advanced_photonic_algorithms.py  advanced_photonic_report.json  quantum_photonic_breakthrough.py  quantum_photonic_report.json
scripts/: autonomous_deployment.sh  deploy.sh  install_mlir.sh  setup.sh
test/: CMakeLists.txt
test/Dialect/: CMakeLists.txt  photonic-ops.mlir
tests/: conftest.py  test_compiler.py  test_integration.py  test_validation.py
tools/: CMakeLists.txt
tools/photonic-opt/: CMakeLists.txt  photonic-opt.cpp
tools/photonic-translate/: CMakeLists.txt  photonic-translate.cpp
